configurations/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  selector:
    app: overseerr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5055
  type: LoadBalancer
