configurations/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: core
annotations:
  nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /overseerr(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055
